hphp/test/zend/bad/tests/classes/type_hinting_005c.php
<?php
Class C { function f(SomeClass $a) {} }

echo "Array hint, should be class.\n";
Class D extends C { function f(array $a) {} }
?>
==DONE==